--- a/EjExtraSpring-estancias/estancias/pom.xml
+++ b/EjExtraSpring-estancias/estancias/pom.xml
@@ -45,7 +45,7 @@
             <scope>test</scope>
         </dependency>
                 
-        <!--
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
-        </dependency>-->
+        </dependency>
                 
     </dependencies>
 
